--- a/templates/blog/post-byline.html
+++ b/templates/blog/post-byline.html
@@ -1,3 +1,4 @@
 {% load blog_extras %}
+{% include "blog/post-byline.html" %}
 <small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
 <small>By {% author_details_tag %} on {{ post.published_at|date:"M, d Y" }}</small>
