--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load blog_extras %}
 {% block content %}
+{% include "blog/post-comments.html" %}
 <h2>{{ post.title }}</h2>
 {% row %}
     <div class="col">
